--- a/app/themes/default/less/thread-view.less
+++ b/app/themes/default/less/thread-view.less
@@ -50,6 +50,10 @@
     textarea{
         line-height: 130%;
     }
+	.right-side-edit-view-panel{
+		display: inline-block;
+		float: none;
+	}
 }
 
 .single-coloumn-details-view,
